--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    display:flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    justify-content: space-between;
+    background-color:#EBEBEB;
+}
 header{
     display: flex;
     width: 100%;
@@ -5,30 +18,38 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 0 0.5rem 0;
-    position: fixed;
-    top: 0;
-    z-index: 999;
-    background-color: #EBEBEB;
 }
 .navegação{
     display: flex;
-    width: 40%;
+    width: 50%;
 }
 .listagem{
     display:flex;
-    width: 90%;
+    width: 100%;
     justify-content: space-between;
-    margin-right: 10rem;
+    text-decoration: none;
+    list-style: none;
+}
+.caminho{
+    display: flex;
+    text-decoration: none;
+    padding: 0 1rem 0 1rem;
+    color: black;
+    transition: 0.2s;
+}
+.caminho:hover{
+    transform: scale(1.1);
 }
 .logo{
     display: flex;
-    width: 5%;
+    width: 7%;
     height: auto;
-    padding: 0, 1rem, 0, 1rem;
+    padding: 1rem;
 }
 .botoes{
     display:flex;
-    justify-content: space-between;
+    width: 10%;
+    justify-content:space-evenly;
     align-items: center;
 }
 .botão-menu{
@@ -41,7 +62,6 @@ header{
 }
 .banner{
     display: flex;
-    background-color: #EBEBEB;
     width: 100%;
     height: auto;
     align-items:center;
@@ -49,16 +69,29 @@ header{
 }
 .banner-text{
     display: flex;
+    width: 50%;
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+}
+.container-img{
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: end;
+    background-color: blueviolet;
 }
 .img-abajur{
     display: flex;
-    width: 30%;
+    width: 400px;
     height: auto;
     padding: 0, 1rem, 0, 1rem;
 }
 .img-poltrona{
     display: flex;
-    width: 80%;
+    width: 250px;
     height: auto;
     padding: 0, 1rem, 0, 1rem;
 }
@@ -69,7 +102,6 @@ footer{
     height: auto;
     justify-content: space-between;
     padding: 1rem 0 0 1rem;
-    background-color: #EBEBEB;
 }
 .img-facebook{
     display: flex;
