--- a/src/style.css
+++ b/src/style.css
@@ -74,14 +74,28 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    background-color:#EBEBEB;
+}
+.text-one{
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 5px grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    text-align: center;
+    margin: 3rem 5rem 2rem 5rem;
+}
+.text-two{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 21px;
+    margin: 0 1rem 5rem 1rem;
 }
 .container-img{
     display: flex;
     width: 50%;
     justify-content: center;
     align-items: end;
-    background-color: blueviolet;
+    background-color: #EBEBEB;
 }
 .img-abajur{
     display: flex;
@@ -97,12 +111,18 @@ header{
 }
 footer{
     display: flex;
-    flex-direction: column;
     width: 100%;
     height: auto;
-    justify-content: space-between;
-    padding: 1rem 0 0 1rem;
-    background-color:aquamarine;
+    justify-content:center;
+    padding: 1rem;
+    background-color:#EBEBEB;
+}
+.footer-box{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 .box-footer{
     display:flex;
@@ -110,37 +130,52 @@ footer{
     height: auto;
     justify-content: center;
     align-items: center;
-    background-color: chocolate;
-    
+    background-color: #EBEBEB;
+}
+.box-options{
+    display: flex;
+    width: 70%;
+    height: auto;
+    background-color: #EBEBEB;
 }
 .text-title{
-
+    display: flex;
+    width: 50%;
+    align-items: center;
+    padding-left: 6rem;
+    font-size: 30px ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .text-options{
     display: flex;
+    width: 50%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #EBEBEB;
+}
+.footer-link{
     text-decoration: none;
     list-style: none;
-    padding: 0 8rem 0 8rem;
-    background-color: greenyellow;
-}
-.img-facebook{
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-.img-whatsapp{
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-.img-instagram{
-    display: flex;
-    width: 100%;
-    height: auto;
+    color: black;
 }
 .bot-footer{
     display: flex;
-    width: 100%;
+    width: 30%;
     height: auto;
-    background-color:black;
+    justify-content: end;
+    gap: 10px;
+    background-color:#EBEBEB;
+}
+.nav-rede{
+    display: flex;
+    width: 30%;
+    justify-content:space-between;
+    align-items: center;
+    background-color: #EBEBEB;
+}
+.footer-text{
+    display: flex;
+    width: 70%;
+    align-items: center;
+    justify-content:end
 }
